fixed button mis alignment

--- a/frontend/src/pages/ProviderPages/PatientList/PatientList.css
+++ b/frontend/src/pages/ProviderPages/PatientList/PatientList.css
@@ -86,7 +86,7 @@
   font-size: 1.1rem;
   font-weight: 600;
 
-  width: 125px; 
+  width: 180px; 
   max-width: auto;
   height: 40px;     
   padding: 0 16px; 
