--- a/frontend/src/pages/UserProfile/UserProfile.css
+++ b/frontend/src/pages/UserProfile/UserProfile.css
@@ -157,7 +157,7 @@
   font-size: 1.1rem;
   font-weight: 600;
 
-  width: 140px; 
+  width: 200px; 
   max-width: auto;
   height: 40px;     
   padding: 0 16px; 
